[package]
name = "image-host-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
once_cell = "1.19.0"
actix = "0.13.1"
actix-web = { version = "4.4.0", features = ["rustls-0_21"] }
actix-cors = "0.6.5"
actix-multipart = "0.6.1"
rustls = "0.21.9"
rustls-pemfile = "1.0.3"
actix-tls = "3.1.1"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
brotli = "3.4.0"
futures = "0.3.30"